--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
+# PyTorch with CUDA 12.8 support
+--pre
+--index-url https://download.pytorch.org/whl/nightly/cu128
+torch==2.8.0.dev20250602+cu128
+
+# Other packages from PyPI
+--index-url https://pypi.org/simple
+transformers>=4.38.1
+peft>=0.9.0
+datasets>=2.17.0
+PyPDF2>=3.0.0
+tqdm>=4.66.0
+accelerate>=0.27.0
+bitsandbytes>=0.42.0
+optimum>=1.16.1
+
 pdf2image==1.16.3
 pytesseract==0.3.10
 Pillow==10.0.0
 python-dotenv==1.0.0
-tqdm==4.65.0
-numpy==1.24.3
-pandas==2.0.2
-scikit-learn==1.2.2
-torch==2.0.1
-transformers==4.30.2
-datasets==2.12.0
-accelerate==0.20.3
-bitsandbytes==0.39.0
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
 sentencepiece==0.1.99
 protobuf==4.23.2 
